refactor: edit dokumentasi swagger
